@@ -23,6 +23,49 @@ from the command line in the target directory in which you are working.
     <td align="center" valign="top"><b>Required</b></td>
   </tr>
   <tr>
+    <td colspan="3">Attributes from parent Cvs task which are meaningful here<br/>
+    Since ant 1.6.1</td>
+  </tr>
+  <tr>
+    <td valign="top">cvsRoot</td>
+    <td valign="top">the <code>CVSROOT</code> variable.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">cvsRsh</td>
+    <td valign="top">the <code>CVS_RSH</code> variable.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">package</td>
+    <td valign="top">the package/module to check out.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">port</td>
+    <td valign="top">Port used by CVS to communicate with the server.</td>
+    <td align="center" valign="top">No, default port 2401.</td>
+  </tr>
+  <tr>
+    <td valign="top">passfile</td>
+    <td valign="top">Password file to read passwords from.</td>
+    <td align="center" valign="top">No, default file ~/.cvspass.</td>
+  </tr>
+  <tr>
+    <td valign="top">failonerror</td>
+    <td valign="top">Stop the build process if the command exits with a
+      return code other than <code>0</code>. Defaults to false</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">tag</td>
+    <td valign="top">query the changelog for a specific branch.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td colspan="3">Specific attributes</td>
+  </tr>
+  <tr>
     <td valign="top">dir</td>
     <td valign="top">The directory from which to run the CVS <em>log</em>
      command.</td>
@@ -139,6 +182,11 @@ under the <code>dve/network</code> directory, substituting the name
 anytime it encounters a change made by the user ID &quot;donaldp&quot;.
 It writes these changes into the file <code>changelog.xml</code>.</p>
 
+<p>Generates a change log report on the <code>ANT_16_BRANCH</code>.</p>
+<pre>
+ &lt;cvschangelog dir=&quot;c:/dev/asf/ant.head&quot; passfile=&quot;c:/home/myself/.cvspass&quot;
+                destfile=&quot;changelogant.xml&quot; tag=&quot;ANT_16_BRANCH&quot; /&gt;
+</pre>
 <h4>Generate Report</h4>
 <p>Ant includes a basic XSLT stylesheet that you can use to generate 
 a HTML report based on the xml output. The following example illustrates
@@ -173,7 +221,7 @@ This allows temp[lates to be stored inside jar]]&gt;&lt;/msg&gt;
 &lt;/changelog&gt;
 </pre>
 
-<hr><p align="center">Copyright &copy; 2002-2003 Apache Software Foundation. All rights
+<hr><p align="center">Copyright &copy; 2002-2004 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
